[fix]#11318 blog card overflow pb

--- a/modules/_text.scss
+++ b/modules/_text.scss
@@ -74,7 +74,9 @@ label{
 	white-space: nowrap;
 	overflow: hidden;
 }
-
+strong.cell-ellipsis{
+	display: block;
+}
 
 .inline-editing{
 	color: darken($grayLight, 40%);
